﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-18 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * querywindow.php: wrong handling of linebreaks in query: bug #1243888
    
2005-10-17 Michal Čihař  <michal@cihar.com>
    * lang/czech: Translation fixes.
    * libraries/common.lib.php: Group databases by rightmost separator (bug
      #1325651).
    * libraries/string.lib.php: Fix escaping detection on multi byte strings.
    * libraries/sql_query_form.lib.php: No warning if no db defined.
    * libraries/sqlparser.lib.php: Avoid warning if analyzing failed.

2005-10-17 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css/phpmyadmin.css.php: border around tabs bug #1326730
    * libraries/header_meta_style.inc.php, themes/*: removed unused 'js_isDOM'
    * queryframe.php, db_operations.php, footer.inc.php, header.inc.php,
      header_printview.inc.php, left.php, querywindow.php,
      transformation_wrapper.php, left_header.inc.php:
      removed queryframe.php and references to it
    * index.php, footer.inc.php, left.php, querywindow.php, server_databases.php
      libraries/common.lib.php, libraries/left_header.inc.php,
      libraries/sql_query_form.lib.php, libraries/querywindow.js:
      code cleanup whole querywindow js stuff, moved all in one new js file,
      now included in index.php, bug #1327055 
    
2005-10-16 Michal Čihař  <michal@cihar.com>
    * db_details_links.php: Disable drop tab on mysql database (RFE #1327514).
    * server_databases.php: Don't allow to check mysql database for dropping
      (RFE #1327514).
    * lang/*, libraries/transformations/text_plain__sql.inc.php:
      Transformation for SQL pretty printing (RFE #1327648).

2005-10-16 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_create.php, tbl_alter.php: undefined $field_collation under MySQL < 4.1.x
    * tbl_properties_structure.php, tbl_alter.php, libraries/sqlparser.lib.php: